feat(users): Update service for create user, hash added
